src/components/Poll/styling/PollOptionList.scss
.str-chat {
  --str-chat__poll-checkmark-size: 24px;
}

.str-chat__poll-option-list {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-md);

  .str-chat__poll-option {
    display: grid;
    grid-template-columns: minmax(0, auto) 1fr;
    grid-template-rows: 1fr auto;
    row-gap: var(--spacing-xs);
    align-items: start;

    &.str-chat__poll-option--votable {
      column-gap: var(--spacing-sm);

      &:hover {
        cursor: pointer;
      }
    }

    .str-chat__checkmark {
      grid-column: 1;
      grid-row: span 2;
      height: var(--str-chat__poll-checkmark-size);
      width: var(--str-chat__poll-checkmark-size);
      border-radius: var(--str-chat__border-radius-circle);
      border: 1px solid var(--str-chat__disabled-color);
    }

    .str-chat__checkmark--checked {
      height: calc(var(--str-chat__poll-checkmark-size) + 1px);
      width: calc(var(--str-chat__poll-checkmark-size) + 1px);
      background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiPjxwYXRoIGZpbGw9IiNmZmYiIGQ9Im00IDkuNC00LTRMMS40IDQgNCA2LjYgMTAuNiAwIDEyIDEuNGwtOCA4WiIvPjwvc3ZnPg==');
      background-repeat: no-repeat;
      background-position: center;
      background-size: 11px 10px;
      background-color: var(--str-chat__primary-color);
      border: none;
    }

    .str-chat__poll-option-data {
      flex: 1;
      display: flex;
      align-items: start;
      gap: var(--spacing-sm);
      grid-column: 2 / 3;
      grid-row: 1 / 2;

      p {
        margin: 0;
        flex: 1;
      }

      .str-chat__poll-option-voters {
        --str-chat__avatar-size: 1.175rem;
        display: flex;
      }

      .str-chat__poll-option-vote-count {
        font-size: var(--typography-font-size-xs);
        line-height: var(--typography-line-height-tight);
      }
    }

    .str-chat__poll-option__votes-bar {
      grid-column: 2 / 3;
      grid-row: 2 / 3;
      height: 8px;
      width: 100%;
      background: linear-gradient(
        to right,
        var(--chat-poll-progress-fill-incoming) var(--str-chat__amount-bar-fulfillment),
        var(--chat-poll-progress-track-incoming) var(--str-chat__amount-bar-fulfillment)
      );
      border-radius: calc(var(--str-chat__spacing-px) * 4);
    }

    .str-chat__poll-option__votes-bar--winner {
      background: linear-gradient(
        to right,
        var(--chat-poll-progress-fill-incoming) var(--str-chat__amount-bar-fulfillment),
        var(--str-chat__surface-color) var(--str-chat__amount-bar-fulfillment)
      );
    }
  }
}

